<resources>
    <string name="app_name">YourSteps</string>

    <!-- 菜单 -->
    <string name="menu_settings">设置</string>
    <string name="menu_review">足迹</string>
    <string name="menu_calibration">校准</string>
    <string name="menu_reset">重置</string>
    <string name="menu_quit">退出</string>
    <string name="menu_about">关于</string>

    <!-- 计步 -->
    <string name="current_step">当前步数</string>
    <string name="unit_step">步</string>
    <string name="unit_cm">厘米</string>
    <string name="unit_calorie">焦耳</string>

    <!-- 各项内容 -->
    <string name="step_name">名称</string>
    <string name="step_content">内容</string>

    <string name="step_status">运动状态：</string>
    <string name="step_distance">当前距离：</string>
    <string name="step_todayStep">今日步数：</string>
    <string name="step_consumption">今日燃脂：</string>

    <!-- 运动等级 -->
    <string name="step_status_still">静止</string>
    <string name="step_status_mild">轻微</string>
    <string name="step_status_medium">中等</string>
    <string name="step_status_severe">剧烈</string>

    <!-- 设置 -->
    <string name="settings_target">目标</string>
    <string name="settings_magnitude">步幅</string>
    <string name="settings_calorie">单步耗能</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- 提示 -->
    <string name="info_alert">您的足迹尚未生成，快去计步吧</string>

    <!-- 校准 -->
    <string name="calibration_title">校准</string>
    <string name="calibration_first">检测到软件第一次安装，建议按照提示进行计步校准操作</string>
    <string name="calibration_option">下面将进入计步校准功能，请选择空旷地带，按提示分别进行慢走、快走、慢跑以及快跑</string>
    <string name="calibration_preparation">校准即将开始，请准备</string>
    <string name="calibration_walkSlowly">请慢走</string>
    <string name="calibration_interval1">慢走完成</string>
    <string name="calibration_walkQuickly">请快走</string>
    <string name="calibration_interval2">快走完成</string>
    <string name="calibration_runSlowly">请慢跑</string>
    <string name="calibration_interval3">慢跑完成</string>
    <string name="calibration_runQuickly">请快跑</string>
    <string name="calibration_interval4">快跑完成</string>
    <string name="calibration_finished">测试完成，转入软件页面</string>
    <string name="calibration_time">60</string>

    <!-- 关于 -->
    <string name="title_about">关于</string>
    <string name="version">版本</string>
    <string name="copyright_statement">本产品属于仙交大天才少年团所有，盗版必究！</string>

</resources>
