<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindray.yoursteps.view.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_review"
        android:orderInCategory="102"
        android:title="@string/menu_review"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="103"
        android:title="@string/menu_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="104"
        android:title="@string/menu_quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>